--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.8",
     "axios": "0.18.1",
     "core-js": "3.6.5",
     "element-ui": "2.13.2",
@@ -20,6 +21,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "tinymce": "^5.10.3",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
